--- a/src/app/media-item.component.css
+++ b/src/app/media-item.component.css
@@ -7,7 +7,7 @@
   background-color: #29394b;
   padding: 10px;
   color: #bdc2c5;
-  margin: 0 12px 12px 0;
+  margin: 12px 12px 12px 0;
 }
 h2 {
   font-size: 1.6em;
